@@ -1,0 +1,11 @@
+<tr>
+  <td>
+<table class="info">
+  <tr>
+    <td>
+    $COMMENT
+    </td>
+  </tr>
+</table>
+  </td>
+</tr>
